Added generation of PDF using reportlab and Fixed some errors.

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
@@ -153,7 +153,11 @@
                     </div>
                 </div>
             </div>
-
+            <div class="col-md-8">
+                <label for="uploadImage" class="form-label">Upload Image</label>
+                <input type="file" class="form-control" name ="imageUpload" accept="image/png, image/gif, image/jpeg">
+                </select>
+            </div>
             <div class="col-md-6" style="margin: auto;">
                 <div class="row" id="casedetails">
                     <div class="col-md-12">
