--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -118,7 +118,7 @@
               <td>{{items.complainant}}</td>
               <td>{{items.datenow}}</td>
               <td>
-                <button name="submitBtn" value="{{items.id}}" type="submit" class="btn btn-primary">View Details </button>
+                <button name="submitBtn" href ="{% static 'view_details()' %}"value="{{items.id}}" type="submit" class="btn btn-primary">View Details </button>
               </td>
             </tr>
             {% endfor %}
