--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
@@ -32,6 +32,7 @@
         </button>
         <div class="collapse navbar-collapse" id="hamburger">
           <ul class="navbar-nav ms-auto text-center">
+            <li><a class="nav-link" href="/lookup">Lookup</a></li>
             <li><a class="nav-link" href="/admin_lookup">Offenders</a></li>
             <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
             <li><a class="nav-link" href="/schedule">Schedule</a></li>
@@ -81,7 +82,7 @@
                 </div>
                 <div class="row" id="nomargin">
                     <div class="col-md-6" id="age">
-                        <label for="inputAge" class="form-label">Age</label>
+                        <label for="inputAge" class="form-label">Offender's Age</label>
                         <input type="text" class="form-control" id="inputAge" name="inputage" placeholder="30"
                         aria-label="Offender Age" required>
                     </div>
