--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookupAdmin.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookupAdmin.html
@@ -34,13 +34,14 @@
 </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-      <a class="navbar-brand">Offender Locator</a>
+      <a class="navbar-brand" href="/">Offender Locator</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
           aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="hamburger">
         <ul class="navbar-nav ms-auto text-center">
+          <li><a class="nav-link" href="/lookup">Lookup</a></li>
           <li><a class="nav-link" href="/admin_lookup">Offenders</a></li>
           <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
           <li><a class="nav-link" href="/schedule">Schedule</a></li>
