--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/schedule.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/schedule.html
@@ -41,8 +41,10 @@
       </button>
       <div class="collapse navbar-collapse" id="hamburger">
         <ul class="navbar-nav ms-auto text-center">
+          <li><a class="nav-link" href="/lookup">Lookup</a></li>
           <li><a class="nav-link" href="/admin_lookup">Offenders</a></li>
           <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
+          <li><a class="nav-link" href="/schedule">Schedule</a></li>
           <li><a class="nav-link" href="/account_manager">Account Manager</a></li>
     
           <div class="btn-group">
