--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/accountmanager.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/accountmanager.html
@@ -41,6 +41,7 @@
       </button>
       <div class="collapse navbar-collapse" id="hamburger">
         <ul class="navbar-nav ms-auto text-center">
+          <li><a class="nav-link" href="/lookup">Lookup</a></li>
           <li><a class="nav-link" href="/admin_lookup">Offenders</a></li>
           <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
           <li><a class="nav-link" href="/schedule">Schedule</a></li>
