Fixed search function

--- a/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
+++ b/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
@@ -25,7 +25,7 @@
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-        <a class="navbar-brand">Offender Locator</a>
+        <a class="navbar-brand" href="/">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
             aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
